fix: ios vh is too long

--- a/src/App.css
+++ b/src/App.css
@@ -511,7 +511,7 @@ body[arco-theme='dark'] {
 
 html, body, #app {
     width: 100vw;
-    height: 100vh;
+    height: calc(100 * var(--vh));
     overflow-x: hidden;
 }
 
